[TASK]    Add BEGIN and COMMIT statements needed to run ke_search in a Percona-Database-Cluster with strict-mode. Thanks to rentz-skygate. https://github.com/tpwd/ke_search/issues/222
[BUGFIX]  Render file preview in result list only for files which are in the "imagefile_ext" list (images and PDF files). https://github.com/tpwd/ke_search/issues/60

Version 5.4.1, 19 April 2024
[BUGFIX]  Always remove duplicates from tags, not only when a tag is set in the indexer configuration. https://github.com/tpwd/ke_search/issues/211
[BUGFIX]  Fix TypeError after 'RemoveLock'. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/issues/223
[BUGFIX]  Avoid PHP warning "Undefined array key" in TimeUtility. https://github.com/tpwd/ke_search/issues/221

Version 5.4.0, 12 April 2024
[!!!]     The generation of tags has been updated. If a tag is auto-generated e.g. from a category title, it will now be changed if it does not meet the requirements (length, allowed characters, not in list of stop words). If it is too short or is in the list of stop words, the character "A" will be appended automatically. That may affect your filters if you are using tags that don't meet the requirements. In that case re-index and check if the tags in filter options match the tags in the index.
[FEATURE] Make sure stop words are not used as tags, https://github.com/tpwd/ke_search/issues/81
[FEATURE] Show progress of indexing in backend module and in console command, add new console command "indexerstatus". https://github.com/tpwd/ke_search/issues/216
[TASK]    Update default pagination template, add first and last page. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/issues/219 and https://github.com/tpwd/ke_search/pull/218
[TASK]    Add "ignorePageTypeRestriction" to TCA configs, allow records on default pages and the root page in TYPO3 v12. Thanks to Dimitri König. https://github.com/tpwd/ke_search/pull/212

Version 5.3.0, 23 February 2024